--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.8.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.11.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
     "sort-by": "^1.2.0"
   },
