--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-lazy-load-image-component": "^1.5.6",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
